--- a/trunk/module/Catalogue/view/catalogue/catalogue/edit.phtml
+++ b/trunk/module/Catalogue/view/catalogue/catalogue/edit.phtml
@@ -16,9 +16,43 @@ echo $this->formRow($form->get('patient_id')) . PHP_EOL;
 echo $this->formRow($form->get('title')) . PHP_EOL;
 echo $this->formRow($form->get('url_catalogue')) . PHP_EOL;
 echo $this->formRow($form->get('url_rest')) . PHP_EOL;
-echo $this->formRow($form->get('descriptionkey')) . PHP_EOL;
-echo $this->formRow($form->get('imgkey')) . PHP_EOL;
+
+
+if($this->nameimg !== '')
+{
+	?>
+<div class="controls">
+       <img src="<?php echo WEB_PATH_IMG.'/';?><?php echo $this->nameimg; ?>" style="width: 740px; height:425px;"/>
+		
+</div>
+<?php
+}
+
+
+$template_content = $form->get('descriptionkey');
+$tbl_template_content = $template_content->getOption('label');
+$txt_template_content = $this->formTextarea($template_content);
+
+?>
+<div class="control-group">
+		<label class="control-label" for=""><?php echo $tbl_template_content; //echo $this->translate($tbl_description, 'PerseedApplication');?></label>
+		<div class="controls">
+			<?php echo $txt_template_content ;?>
+		</div>
+	</div>
+	
+<?php 
+
+echo $this->formRow($form->get('imgkeyedit')) . PHP_EOL;
 //echo $this->formRow($form->get('idmzalbum')) . PHP_EOL;
 echo $this->formInput($form->get('submit')) . PHP_EOL;
 echo $this->form()->closeTag($form) . PHP_EOL;
-
+?>
+<script type="text/javascript" src="<?php echo CKEDITOR_PATH;?>"></script>
+<script type="text/javascript">
+CKEDITOR.replace( 'descriptionkey', {
+	width: "900px",
+	height: "300px",
+	toolbar: "Full"
+} );
+</script>
