--- a/trunk/public/editorapp/index.phtml
+++ b/trunk/public/editorapp/index.phtml
@@ -32,15 +32,15 @@
                             </div>
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                               <ul class="nav navbar-nav">
-                                <li class="active"><a href="<?php echo $Editorapp ; ?> #"><img src="<?php echo $Editorapp ; ?>images/h4.png" alt="h4" /></a></li>
-                                <li class="dt-active"><a href="<?php echo $Editorapp ; ?> #"><img src="<?php echo $Editorapp ; ?>images/h3-2.png" alt="h3" /></a></li>
+                                <li class="active"><a href="<?php echo $Editorapp ; ?>"><img src="<?php echo $Editorapp ; ?>images/h4.png" alt="h4" /></a></li>
+                                <li class="dt-active"><a href="<?php echo $Editorapp ; ?>"><img src="<?php echo $Editorapp ; ?>images/h3-2.png" alt="h3" /></a></li>
                                 <li><p>Page:</p></li>
                                 <li class="dropdown">
                                   <a href="<?php echo $Editorapp ; ?> #" class="dropdown-toggle" data-toggle="dropdown">Home<b class="caret"></b></a>
                                   <ul class="dropdown-menu">
-                                    <li><a href="<?php echo $Editorapp ; ?> #">Home</a></li>
-                                    <li><a href="<?php echo $Editorapp ; ?> #">About</a></li>
-                                    <li><a href="<?php echo $Editorapp ; ?> #">Contact</a></li>
+                                    <li><a href="<?php echo $Editorapp ; ?>">Home</a></li>
+                                    <li><a href="<?php echo $Editorapp ; ?>">About</a></li>
+                                    <li><a href="<?php echo $Editorapp ; ?>">Contact</a></li>
                                   </ul>
                                 </li>
                               </ul>
@@ -84,7 +84,7 @@
                           <li class="design-topprin"><a href ="#tab_2"></a></li>
                           <li class="add-topprin"><a href ="#tab_3"></a></li>
                           <li class="app-topprin"><a href ="#tab_4"></a></li>
-                          <li class="setting-topprin"><a href="<?php echo $Editorapp ; ?> #tab_5"></a></li>
+                          <li class="setting-topprin"><a href="#tab_5"></a></li>
                       </ul>
                   </div>
                   <div id="tab_1" class="col-lg-3 col-md-4 col-sm-5 col-xs-9 tab_content">
@@ -99,12 +99,12 @@
                                                               <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-note-page"> Navigate through your pages. To rename a page, click the wheel icon.</p>                     
                                                               <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-drag-page">Drag pages up/down to reorder</p>
                                                               <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-righ-page">Drag pages up/down to reorder</p>
-                                                              <a data-toggle="modal" data-target="#myModal" href="<?php echo $Editorapp ; ?> #">Learn More</a>
+                                                              <a data-toggle="modal" data-target="#myModal" href="<?php echo $Editorapp ; ?>">Learn More</a>
                                                           </div>
                                                           <div class="clear"></div>
                                                           <div class="scrollbar">
                                                               <ul class="nav bs-docs-sidenav-page"> 
-                                                                    <li class="nav-home-page"><a href="<?php echo $Editorapp ; ?> #">Home <i class="setting-page"></i></a></li>
+                                                                    <li class="nav-home-page"><a href="<?php echo $Editorapp ; ?>">Home <i class="setting-page"></i></a></li>
                                                                     <li><a href="<?php echo $Editorapp ; ?> #">About <b class="caret"></b><i class="setting-page"></i></a>
                                                                          <ul class="nav sidenav-trong">
                                                                             <li><a href="<?php echo $Editorapp ; ?> #">PRESS <i class="setting-page"></i></a></li>
@@ -112,22 +112,22 @@
                                                                         </ul>
                                                                     </li>
                                                                     <div class="clear"></div>
-                                                                    <li><a href="<?php echo $Editorapp ; ?> #">menu <i class="setting-page"></i></a></li>
-                                                                    <li><a href="<?php echo $Editorapp ; ?> #">contact <i class="setting-page"></i></a></li>
-                                                                     <li><a href="<?php echo $Editorapp ; ?> #">menu <i class="setting-page"></i></a></li>
-                                                                    <li><a href="<?php echo $Editorapp ; ?> #">contact <i class="setting-page"></i></a></li>
-                                                                    <li><a href="<?php echo $Editorapp ; ?> #">menu <i class="setting-page"></i></a></li>
-                                                                    <li><a href="<?php echo $Editorapp ; ?> #">contac <i class="setting-page"></i>t</a></li>
-                                                                     <li><a href="<?php echo $Editorapp ; ?> #">menu <i class="setting-page"></i></a></li>
-                                                                    <li><a href="<?php echo $Editorapp ; ?> #">contact <i class="setting-page"></i></a></li>
+                                                                    <li><a href="<?php echo $Editorapp ; ?>">menu <i class="setting-page"></i></a></li>
+                                                                    <li><a href="<?php echo $Editorapp ; ?>">contact <i class="setting-page"></i></a></li>
+                                                                     <li><a href="<?php echo $Editorapp ; ?>">menu <i class="setting-page"></i></a></li>
+                                                                    <li><a href="<?php echo $Editorapp ; ?>">contact <i class="setting-page"></i></a></li>
+                                                                    <li><a href="<?php echo $Editorapp ; ?>">menu <i class="setting-page"></i></a></li>
+                                                                    <li><a href="<?php echo $Editorapp ; ?>">contac <i class="setting-page"></i>t</a></li>
+                                                                     <li><a href="<?php echo $Editorapp ; ?>">menu <i class="setting-page"></i></a></li>
+                                                                    <li><a href="<?php echo $Editorapp ; ?>">contact <i class="setting-page"></i></a></li>
                                                               </ul>
                                                           </div>
                                                           <div class="clear"></div>
-                                                          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 add-page-page"><a href="<?php echo $Editorapp ; ?> #">Add page </a></div>
-                                                          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 setting-seo-page"><a href="<?php echo $Editorapp ; ?> #">Settings and SEO</a></div>
+                                                          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 add-page-page"><a href="<?php echo $Editorapp ; ?>">Add page </a></div>
+                                                          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 setting-seo-page"><a href="<?php echo $Editorapp ; ?>">Settings and SEO</a></div>
                                                           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-Page-transtions">
                                                                 <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11 gh-transtions"><p>Page transtions</p></div>
-                                                                <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 link-transtions"><a href="<?php echo $Editorapp ; ?> #">?</a></div>
+                                                                <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 link-transtions"><a href="<?php echo $Editorapp ; ?>">?</a></div>
                                                                 
                                                           </div>
                                                           
@@ -159,7 +159,7 @@
                                                   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 c-content-design">
                                                       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-bosung-design">
                                                           <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-note-design">Play with the design tools to make your site look exactly how you want.</p>                     
-                                                          <a data-toggle="modal" data-target="#myModal" href="<?php echo $Editorapp ; ?> #">Learn More</a>
+                                                          <a data-toggle="modal" data-target="#myModal" href="<?php echo $Editorapp ; ?>">Learn More</a>
                                                       </div>
                                                       <div class="clear"></div>
                                                       <div id="scrollbar-bs-docs-sidenav-design">
@@ -181,7 +181,7 @@
                                                                             <p>Select a background below or choose to Upload your own image. You can also click Customize Background and make changes to get your exact look & feel.</p>
                                                                         </div>
                                                                         <div class="lear-more-background-design">
-                                                                            <a href="<?php echo $Editorapp ; ?> #">Learn More</a>
+                                                                            <a href="<?php echo $Editorapp ; ?>">Learn More</a>
                                                                         </div>
                                                                         <div class="button-top-background-design">
                                                                                 <button type="button" class="btn btn-info">Upload & Customize Background</button>
